--- a/main.lfm
+++ b/main.lfm
@@ -14036,6 +14036,29 @@ object MainForm: TMainForm
     ParentFont = False
     TabOrder = 3
   end
+  object check_update: TCheckBox
+    Left = 32
+    Height = 19
+    Top = 218
+    Width = 20
+    Color = clNone
+    Font.Color = clWhite
+    Font.Style = [fsBold]
+    ParentColor = False
+    ParentFont = False
+    TabOrder = 4
+  end
+  object lbl_checkupdate: TLabel
+    Left = 56
+    Height = 15
+    Top = 220
+    Width = 90
+    Caption = 'lbl_checkupdate'
+    Font.Color = clWhite
+    Font.Style = [fsBold]
+    ParentColor = False
+    ParentFont = False
+  end
   object Timer1: TTimer
     Enabled = False
     OnTimer = Timer1Timer
